<resources>
    <string name="app_name">ClinincApp</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="check_available_slots">select slots</string>
    <string name="select_date_to_book_appointment">Select date to book appointment</string>
    <string name="eveningSlot">6 P.M - 10 P.M</string>
    <string name="morningSlot">10 A.M - 2 P.M</string>
    <string name="bookButton">Book Slot</string>
    <string name="checkAppointmentStatus">Check appointment status</string>
    <string name="clearDataBase">Clear DataBase</string>
    <string name="checkPatient">Check a patient</string>
    <string name="bookAnotherApp">Book another appointment</string>
</resources>
